Bug 32861 - Impress hangs part way through slide show
Summary: Impress hangs part way through slide show
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.3.0 RC2
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Thorsten Behrens (allotropia)
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: mab3.4
  Show dependency treegraph
 
Reported: 2011-01-05 15:10 UTC by Mark Hull-Richter
Modified: 2011-09-06 07:27 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
presentation with the same problem on first slide (315.85 KB, application/vnd.oasis.opendocument.presentation)
2011-05-17 03:32 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hull-Richter 2011-01-05 15:10:02 UTC
I have a Power Point slide show presentation that runs fine until about 2/3 of the way through where it encounters a rotating image.  On that slide, it hangs hard - the only way out is to force-quit or kill the presentation process, and that kills all open LO processes.

Note: This .pps runs fine under OpenOffice 3.2.1 - no problems.

I run Ubuntu 10.10 with Gnome 2.32.

This has been discussed on the users email list and confirmed for at least Ubuntu 10.10 and 11.04 and Mandriva, possibly others.

The offending file is attached.

The show stops on slide 21, if it runs that far.

I just did an experiment, and the results are a little different than I expected.  Last night on my Athlon 2 X4 system, this slide show hung on slide 21 and I had to kill it as described above.  Today I just tried it on my Dell Precision T5500, a dual-quad-core (Intel Xeon) with 3GB of memory also running Ubuntu 10.10 x86_64, but on this machine it dragged everything to an i/o wait state (according to my system monitor applet) and crushed the performance to a 1-30 second pause between any responses.  I had to use an alternate console to kill the LO and eventually I wound up killing the login session altogether to get the machine back to normal operations.
Comment 1 Sigrid Carrera 2011-01-05 15:32:02 UTC
Hi, 

I guess, Mark forgot to attach the file. :) 

And since it is too big, you can download it from here: 
http://zentektales.com/The_Human_Brain2.pps

Sigrid
Comment 2 Alex Thurgood 2011-01-06 02:57:10 UTC
I can not confirm the buggy behaviour on Mac OSX 10.6.5, the presentation runs just fine.


Alex
Comment 3 Richard L Hess 2011-01-06 17:41:59 UTC
I was NOT able to reproduce the bug in either:
  LO 3.3 RC2 OR
  Microsoft PowerPoint 2003
Both platforms played the PPT straight through

Both machines are running Windows XP SP3. LO was via an RDP remote desktop connection.
Comment 4 MR Zenwiz 2011-01-06 17:57:47 UTC
That makes perfect sense.  My more recent experiences with Impress (and OO Presentation) indicate to me that this problem relates to how LO (OOo) handles the X interface, which is not an issue on Windows.
Comment 5 Jean-Baptiste Faure 2011-01-06 21:38:34 UTC
I do not reproduce the problem with LibreOffice RC2 on Ubuntu 10.04 x86_64 but I reproduce it in OpenOffice.org 3.3.0 RC8
The difference is that "use hardware acceleration" is activated for LibO but not for OOo. 
If I uncheck this option in Tools > Options > LibreOffice > View then now I reproduce the problem.

Best regards. JBF
Comment 6 Michael Meeks 2011-01-17 03:16:48 UTC
With "use hardware acceleration" turned off (ie. Raw X), I see the same issue. The trace I get is something like this:

#21 0xa6833c11 in slideshow::internal::DrawShape::implRender(int) const () from /data/opt/TTInstall/program/../basis-link/program/slideshow.uno.so
#22 0xa6833c70 in slideshow::internal::DrawShape::render() const () from /data/opt/TTInstall/program/../basis-link/program/slideshow.uno.so
#23 0xa684affc in slideshow::internal::LayerManager::update() () from /data/opt/TTInstall/program/../basis-link/program/slideshow.uno.so
#24 0xa684eb55 in slideshow::internal::ShapeManagerImpl::update() () from /data/opt/TTInstall/program/../basis-link/program/slideshow.uno.so
#25 0xa68784dc in bool boost::_mfi::mf0<bool, slideshow::internal::ViewUpdate>::call<boost::shared_ptr<slideshow::internal::ViewUpdate> const>(boost::shared_ptr<slideshow::internal::ViewUpdate> const&, void const*) const () from /data/opt/TTInstall/program/../basis-link/program/slideshow.uno.so
---Type <return> to continue, or q <return> to quit---
#26 0xa68784f5 in bool boost::_mfi::mf0<bool, slideshow::internal::ViewUpdate>::operator()<boost::shared_ptr<slideshow::internal::ViewUpdate> >(boost::shared_ptr<slideshow::internal::ViewUpdate> const&) const () from /data/opt/TTInstall/program/../basis-link/program/slideshow.uno.so
#27 0xa687852b in bool slideshow::internal::ListenerOperations<boost::shared_ptr<slideshow::internal::ViewUpdate> >::notifyAllListeners<_STL::vector<boost::shared_ptr<slideshow::internal::ViewUpdate>, _STL::allocator<boost::shared_ptr<slideshow::internal::ViewUpdate> > > const, boost::_mfi::mf0<bool, slideshow::internal::ViewUpdate> >(_STL::vector<boost::shared_ptr<slideshow::internal::ViewUpdate>, _STL::allocator<boost::shared_ptr<slideshow::internal::ViewUpdate> > > const&, boost::_mfi::mf0<bool, slideshow::internal::ViewUpdate>) ()
   from /data/opt/TTInstall/program/../basis-link/program/slideshow.uno.so
#28 0xa687857b in bool slideshow::internal::ListenerContainerBase<boost::shared_ptr<slideshow::internal::ViewUpdate>, slideshow::internal::EmptyBase, _STL::vector<boost::shared_ptr<slideshow::internal::ViewUpdate>, _STL::allocator<boost::shared_ptr<slideshow::internal::ViewUpdate> > >, 16u>::applyAll<boost::_mfi::mf0<bool, slideshow::internal::ViewUpdate> >(boost::_mfi::mf0<bool, slideshow::internal::ViewUpdate>) const () from /data/opt/TTInstall/program/../basis-link/program/slideshow.uno.so
#29 0xa68776a5 in slideshow::internal::ScreenUpdater::commitUpdates() () from /data/opt/TTInstall/program/../basis-link/program/slideshow.uno.so
#30 0xa687fd01 in (anonymous namespace)::SlideShowImpl::update(double&) () from /data/opt/TTInstall/program/../basis-link/program/slideshow.uno.so
#31 0xa8393d88 in sd::SlideshowImpl::updateSlideShow() () from /data/opt/TTInstall/program/../basis-link/program/libsdli.so
#32 0xa8393f0b in sd::SlideshowImpl::PostYieldListener(void*) () from /data/opt/TTInstall/program/../basis-link/program/libsdli.so
#33 0xb6749c15 in Link::Call(void*) const () from /data/opt/TTInstall/program/../basis-link/program/libvclli.so
#34 0xb6757a90 in VclEventListeners2::callListeners(VclSimpleEvent*) () from /data/opt/TTInstall/program/../basis-link/program/libvclli.so
#35 0xb6751fb4 in ImplYield(bool, bool) () from /data/opt/TTInstall/program/../basis-link/program/libvclli.so
#36 0xb674f470 in Application::Yield(bool) () from /data/opt/TTInstall/program/../basis-link/program/libvclli.so
#37 0xb674f4a1 in Application::Execute() () from /data/opt/TTInstall/program/../basis-link/program/libvclli.so
#38 0xb7de30fe in desktop::Desktop::Main() () from /data/opt/TTInstall/program/../basis-link/program/libsofficeapp.so
#39 0xb67552e2 in ImplSVMain() () from /data/opt/TTInstall/program/../basis-link/program/libvclli.so
#40 0xb67553f0 in SVMain() () from /data/opt/TTInstall/program/../basis-link/program/libvclli.so
#41 0xb7dfcfc4 in soffice_main () from /data/opt/TTInstall/program/../basis-link/program/libsofficeapp.so
#42 0x08048d24 in main ()

Since the UI is still re-painting (the risque lady continues to spin) - the app is still responsive and rendering its frames - although, unfortunately it is not responsive to key-presses, or mouse clicks.

Calling 'finish' on each frame, I end up back in the mainloop quickly; and then bomb out again to do a new updateSlideShow().
Comment 7 Thorsten Behrens (allotropia) 2011-01-17 04:17:24 UTC
taking over.
Comment 8 sasha.libreoffice 2011-05-17 03:32:10 UTC
Created attachment 46797 [details]
presentation with the same problem on first slide

Presetation hanges on first slide of attachment when press F5.
Produced on Mandriva 64 bit on LibreOffice 3.4 beta 5
Comment 9 vitriol 2011-05-17 07:31:49 UTC
I believe that is fixed in OOo:

http://openoffice.org/bugzilla/show_bug.cgi?id=116339
Comment 10 Thorsten Behrens (allotropia) 2011-09-06 07:27:21 UTC
Hum, the fix from i#116339 is nowhere to be found, did something along those lines that seems to indeed fix the problem.