Fix hang in slideshow.

This fixes fdo#32861, by processing all remaining events after the
post-yield callback comes around (that's supposed to be the time
when the app can spend time on event processing).